# dlc_englinux

./: CMakeLists.txt  sr  total_file.txt  tree.txt
doc/pic/: mermaid.md
include/englinux/: eg_main.h
include/englinux/display/: eg_author.h  eg_color.h  eg_copyRight.h  eg_display.h  eg_display_width.h  eg_endSay.h  eg_error.h  eg_find_help.h  eg_print_help.h  eg_print_words.h  eg_prompt.h  eg_story.h
include/englinux/execute/: eg_clear.h  eg_execute.h  eg_execute_four_token.h  eg_execute_one_token.h  eg_execute_three_token.h  eg_execute_two_token.h  eg_find.h  eg_help.h  eg_is_all_digit.h  eg_match.h  eg_parser_first_token.h  eg_parser_fourth_token.h  eg_parser_second_token.h  eg_parser_third_token.h  eg_similarInstructions.h  eg_total_words.h
include/englinux/lexer/: eg_lexer.h
include/englinux/words_lib/: cet4.h  cet6.h  word_set.h  words.h
include/shellText/: include.h
include/shellText/chapters/: chapters.h
include/shellText/display/: text_author.h  text_copyRight.h  text_display.h  text_display_width.h  text_endSay.h  text_error.h  text_find_help.h  text_print_help.h  text_prompt.h  text_story.h  text_subject.h
include/shellText/execute/: text_chapter.h  text_clear.h  text_englinux.h  text_execute.h  text_execute_one_token.h  text_execute_two_token.h  text_find.h  text_help.h  text_is_all_digit.h  (+3 more)
other/: 1.网站.md  src.c
py/: addInclude.py  addPrefix.py  autoInclude.py  backName.py  changeName.py  correct.py  deletePrefix.py  filesCount.py  gcc.py  getName.py  outputName.py  rust.py  shellText.py
src/: main.c
test/: test.c
(+601 files in other folders)
